refactor: 다른 저장소로 옮김

--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,11 +1,13 @@
 #userType {
-  * {
-    margin-right: 50px;
-  }
+  display: flex;
   img {
     width: 140px;
     height: 180px;
     cursor: pointer;
+    filter: opacity(0.7);
+    &:hover {
+      filter: opacity(1);
+    }
   }
 }
 
